--- a/boostrap/css/octa_contacto.css
+++ b/boostrap/css/octa_contacto.css
@@ -7,14 +7,30 @@
     --color-four: #ae445a;
     --color-five: #f39f5a;
     --color-six: #e8bcb9;
-    --color-seven: rgba(252, 232, 197, 0.824);
-   
+    --color-seven: rgba(252, 232, 197, 0.824);  
 }
-.contenedora {
-    
-    overflow-x: hidden; /* Evitar el desbordamiento horizontal solo en este contenedor */
+
+.bg-dark {
+    background-color: var(--color-one) !important;
 }
-.contacto {
+
+.bg-light {
+    background-color: var(--color-seven) !important;
+}
+
+.btn-custom {
+    color: white;
+    padding: 0.50rem 2rem;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
+}
+.btn-custom:hover {
+    background-color: var(--color-five);
+}
+.contact-wrapper {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -22,122 +38,74 @@
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 0;
-    
+}
+.contact-info,
+.contact-form {
+    margin: 0;
 }
 
-.contact-info {
-    background-color: var(--color-one);
-    color: var(--color-six);
-    padding: 1rem;
+.contact-info{ 
     flex: 1;
     max-width: 300px;
-    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
-
-}
-
-.contact-info h3 {
-    font-family: 'Rubik', sans-serif;
-    margin-bottom: 0.5rem;
+    padding: 1rem ;
+    font-size: 16px;
 }
 
 .contact-form {
-    flex: 2;
+    flex: 2 ;
     padding: 1rem;
-    background-color: var(--color-seven);
-    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
-
     width: 100%;
-}
-
-.contact-form h3 {
-    margin-bottom: 1rem;
-    font-family: 'Rubik', sans-serif;
-}
-
-.contact-form form {
-    width: 100%;
-}
-
-.contact-form form label {
-    display: block;
-    margin-bottom: 0.5rem;
-    color: var(--color-three);
 }
 
 .contact-form form input,
 .contact-form form textarea {
+    background-color: var(--color-seven);
     width: 100%;
-    padding: 0.5rem;
     margin-bottom: 1rem;
     border: 1px solid var(--color-three);
-    border-radius: 4px;
-    box-sizing: border-box;
 }
 
-.contact-form form button {
-    background-color: var(--color-three);
-    color: var(--color-six);
-    padding: 0.75rem 1.5rem;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.ubicacion {
-
-    padding: 3%;
-}
-
-
-
-.boton-formulario {
-    font-family: "Montserrat", sans-serif;
-    font-size: 12px;
-    background-color: var(--color-four);
-}
-
-.boton-formulario:hover {
-    background-color: var(--color-five);
-}
-
-
-
-#mapa {
+.mapa {
     width: 100%;
     height: 450px;
     margin-top: 0;
 }
-
-
-/* Tablet and smaller */
+.ubicacion{
+    margin-bottom: 180px;
+    margin-top: 0;
+    padding: 5%;
+}
+/* responsive */
 @media (max-width: 80rem) {
-    .contacto {
+    .contact-wrapper {
         flex-direction: column;
     }
 
     .contact-info {
         max-width: 100%;
-        margin-bottom: 0;
+        margin-bottom: 0; 
     }
 
     .contact-form {
-        flex: 1;
+        flex: 1; 
+    }
+    .contact-info,.contact-form {
+        margin: 0;
     }
 }
 
-/* Mobile and smaller */
 @media (max-width: 40rem) {
     .contact-form form input,
     .contact-form form textarea {
-        font-size: 0.875rem;
+        font-size: 0.875rem; 
     }
 
     .contact-form form button {
         width: 100%;
-        padding: 0.5rem;
+        padding: 0.5rem; 
     }
 
-    #mapa {
-        height: 300px;
+    .mapa {
+        height: 300px; 
     }
 }
