--- a/boostrap/css/nico.css
+++ b/boostrap/css/nico.css
@@ -7,6 +7,9 @@
     --color-six: #e8bcb9;
 }
 
+.container-fluid {
+  padding: 40px;
+}
 .image-overlay {
     position: relative;
     text-align: center;
@@ -17,8 +20,8 @@
     height: auto;
   }
   .overlay-text {
-    position: absolute;
-    top: 50%;
+    position:absolute;
+    top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
@@ -28,7 +31,7 @@
   background-color: var(--color-four); 
   border-radius: 10px; 
   padding: 10px; 
-  font-size: 4em; 
+  font-size: 5vw; 
   color: var(--color-six);
   display: inline-block; 
   text-shadow: 2px 2px 4px var(--color-one);
@@ -40,6 +43,6 @@
   margin-top: 40px;
   text-shadow: 2px 2px 4px var(--color-one);
   font-family: "Dosis", sans-serif;
-  font-size: 2.5rem;
+  font-size: 4,5vw;
   color: var(--color-six);
   }
