--- a/css/victorio.css
+++ b/css/victorio.css
@@ -10,9 +10,6 @@
     --color-six: #e8bcb9;  /* Color claro, usado para texto */
 }
 
-body {
-    font-family: 'Rubik', sans-serif;
-}
 
 header {
     position: fixed;
@@ -23,6 +20,84 @@ header {
     z-index: 999;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+
+
+.carrito-desplegable ul li {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 0;
+    border-bottom: 1px solid #ddd;
+    align-items: center;
+}
+
+.boton-eliminar {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.boton-finalizar {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.boton-finalizar:hover,
+.boton-eliminar:hover {
+    opacity: 0.8;
+}
+
+
+
+
+.carrito-desplegable {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 300px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.carrito-desplegable h4 {
+    margin-top: 0;
+}
+
+.carrito-desplegable ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.carrito-desplegable ul li {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+#total-carrito {
+    text-align: right;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
 
 .logo img {
     width: 50px;
@@ -111,6 +186,11 @@ header {
     text-decoration: none;
     color: var(--color-six);
     font-size: 14px;
+}
+
+.nav-item span {
+    margin-left: 8px;
+    color: var(--color-six);  
 }
 
 .nav-item a:hover {
