--- a/boostrap/css/rodo.css
+++ b/boostrap/css/rodo.css
@@ -11,17 +11,12 @@
 }
 
 .carousel-inner img {
-    border-radius: 10px;
-    margin-left: 2%;
-    width: 100%; /* Ajusta el ancho al 100% del contenedor */
-    height: 400px; /* Establece una altura fija */
-    border-radius: 15px; /* Ajusta este valor para cambiar el radio del borde */
-
+    width: 100%;
+    height: 400px;  
 }
 
 .carousel-item {
-    overflow: hidden; /* Asegúrate de que el contenido no se desborde del contenedor */
-    border-radius: 15px; /* Ajusta este valor para cambiar el radio del borde */
+    overflow: hidden;   
 }
 
 .btn {
@@ -30,12 +25,8 @@
     background-color: var(--color-four);   
 }
 
-.meta{
-    margin-left: 1%;
-}
 
 .objetivo, .meta {
-    
     font-family: "Montserrat", sans-serif;    
 } 
 
@@ -47,15 +38,10 @@
 }
 
 .move {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100%;
-    text-align: center; /* Centra el texto */
     font-family: "Rock Salt", cursive;
     font-weight: 400;
     font-style: normal;
-    position: relative;
     animation: move 5s infinite;
     text-shadow: 
     -1px -1px 0 #ffffff,  
