--- a/boostrap/css/nico.css
+++ b/boostrap/css/nico.css
@@ -1,48 +1,52 @@
 :root{
-    --color-one: #1d1a39;
-    --color-two: #451952;
-    --color-three: #662549;
-    --color-four: #ae445a;
-    --color-five: #f39f5a;
-    --color-six: #e8bcb9;
-}
-
-.container-fluid {
-  padding: 40px;
-}
-.image-overlay {
-    position: relative;
-    text-align: center;
-    color: white;
+  --color-one: #1d1a39;
+  --color-two: #451952;
+  --color-three: #662549;
+  --color-four: #ae445a;
+  --color-five: #f39f5a;
+  --color-six: #e8bcb9;
+  }
+  
+  .container-fluid {
+  padding-top: 3em;
+  
+  }
+  .image-overlay {
+  position: relative;
+  text-align: center;
+  color: white;
   }
   .image-overlay img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
   }
   .overlay-text {
-    position:absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
+  position:absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
   }
-
+  
   .overlay-text h1 {
   background-color: var(--color-four); 
   border-radius: 10px; 
   padding: 10px; 
-  font-size: 5vw; 
+  font-size: 3.5vw; 
   color: var(--color-six);
   display: inline-block; 
   text-shadow: 2px 2px 4px var(--color-one);
   font-family: 'Great Vibes', cursive;
-  border: var(--color-one) solid 2px
+  border: var(--color-one) solid 2px;
+  animation: move 7s infinite;
   }
-
+  
   .overlay-text h3 {
   margin-top: 40px;
   text-shadow: 2px 2px 4px var(--color-one);
   font-family: "Dosis", sans-serif;
-  font-size: 4,5vw;
+  font-size: 2vw;
   color: var(--color-six);
   }
+  
+  
