--- a/miligram/css/rodo.css
+++ b/miligram/css/rodo.css
@@ -120,3 +120,21 @@
      1px  1px 0 #ffffff;
 }
 
+@media (max-width: 1024px) {
+    .carousel {
+        display: flex;
+    }
+}
+
+@media (max-width: 768px) {
+    .carousel {
+        display: flex;
+    }
+}
+
+@media (max-width: 480px) {
+    .carousel {
+        display: flex;   
+    }
+}
+
