--- a/boostrap/css/rodo.css
+++ b/boostrap/css/rodo.css
@@ -10,9 +10,12 @@
     --color-six: #e8bcb9;
 }
 
+
+
+
 .carousel-inner img {
     width: 100%;
-    height: 400px;  
+    height: 100%;  
 }
 
 .carousel-item {
