--- a/miligram/css/victorio.css
+++ b/miligram/css/victorio.css
@@ -203,12 +203,13 @@ header {
     padding: 40px 20px;
     text-align: center;
     font-size: 14px;
+    width: 100%;
+
 }
 
 .footer-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+ 
     margin-bottom: 20px;
 }
 
