--- a/boostrap/css/jona.css
+++ b/boostrap/css/jona.css
@@ -8,6 +8,7 @@
     --color-four: #ae445a;
     --color-five: #f39f5a;
     --color-six: #e8bcb9;
+    --color-seven: rgba(252, 232, 197, 0.824);
 }
 
 
@@ -15,6 +16,7 @@
     transition: transform 0.3s ease;
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
+    background-color: var(--color-seven);
 }
 
 .card:hover {
