--- a/boostrap/css/rodo_nosotros.css
+++ b/boostrap/css/rodo_nosotros.css
@@ -27,8 +27,8 @@
   
 }
 .carousel-item img {
-    max-width: 80%; 
-    height: auto;
+    width: 100%;
+    height: 100%; 
 }
 .carousel-item .content {
     padding: 20px;
