--- a/boostrap/css/rodo.css
+++ b/boostrap/css/rodo.css
@@ -24,8 +24,12 @@
 
 .btn {
     font-family: "Montserrat", sans-serif;
-    font-size: 12px;
+    font-size: 20px;
     background-color: var(--color-four);   
+}
+
+.btn:hover {
+    background-color: var(--color-five);
 }
 
 
