--- a/miligram/css/rodo.css
+++ b/miligram/css/rodo.css
@@ -141,6 +141,11 @@
     .meta {
         flex-direction: column-reverse;
     }
+    .move{
+        padding: 8%;
+        font-size: 46px;
+      
+    }
 }
 
 @media (max-width: 640px) {
@@ -152,6 +157,11 @@
     }
     .meta {
         flex-direction: column-reverse;
+    }
+    .move{
+        padding: 8%;
+        font-size: 24px;
+        
     }
     
 }
