--- a/miligram/css/victorio.css
+++ b/miligram/css/victorio.css
@@ -198,7 +198,8 @@ header {
 
 .footer-container {
     display: flex;
- 
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin-bottom: 20px;
 }
 
@@ -275,6 +276,20 @@ header {
 
     .menu-toggle {
         display: block;
+    }
+
+    .footer-container {
+        flex-direction: column;
+        align-items: center; /* Centra las secciones en la columna */
+    }
+
+    .footer-section {
+        margin-bottom: 20px; /* Añade espacio entre las secciones */
+        text-align: center;
+    }
+
+    .footer-section:last-child {
+        margin-bottom: 0;
     }
 }
 
