--- a/miligram/css/victorio.css
+++ b/miligram/css/victorio.css
@@ -280,11 +280,11 @@ header {
 
     .footer-container {
         flex-direction: column;
-        align-items: center; /* Centra las secciones en la columna */
+        align-items: center; 
     }
 
     .footer-section {
-        margin-bottom: 20px; /* Añade espacio entre las secciones */
+        margin-bottom: 20px; 
         text-align: center;
     }
 
