--- a/miligram/css/victorio.css
+++ b/miligram/css/victorio.css
@@ -145,7 +145,7 @@ header {
     position: absolute;
     top: 100%; 
     right: 20px; 
-    background-color: var(--color-four);
+    background-color: white;
     color: var(--color-one);
     border-radius: 8px;
     padding: 15px;
