--- a/miligram/css/estilo.css
+++ b/miligram/css/estilo.css
@@ -40,7 +40,7 @@ body, html {
 }
 
 .modal-content {
-    background-color: var(--color-four);
+    background-color: white;
     color: var(--color-one);
     margin: 15% auto; 
     padding: 20px;
